--- a/src/Login/style.css
+++ b/src/Login/style.css
@@ -1,46 +1,5 @@
-
-
-#container{
-    display: flex;
-    height: 100vh;
-    width: 100vw;
-}
-
-.img-container{
-    background-image: image();
-    width: 40vw;
-    height: 100vh;
-}
-
-.login-container{
-    width: 60vw;
-    height: 100vh;
+section{
     display: flex;
     flex-direction: column;
 }
 
-form{
-    display: flex;
-    flex-direction: column;
-    padding: 10vh;
-    margin: 4vh;
-    width: 80%;
-    height: 40vw;
-   
-}
-
-h1{
-    font-size: 36px;
-}
-
-.login-container button{
-    background-color: #ffcc00; 
-    color: #333; /* Cor do texto preto */
-    padding: 10px 15px; /* Espaçamento interno */
-    border: 2px solid #ffcc00; /* Borda amarela */
-    border-radius: 5px; /* Cantos arredondados */
-    font-size: 16px; 
-    cursor: pointer; 
-    transition: background-color 0.3s ease; /* Transição suave de cor de fundo */
-    
-}
