--- a/src/Home/baseNav/style.css
+++ b/src/Home/baseNav/style.css
@@ -9,6 +9,10 @@
     margin: 0;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 /*  ---  */
 
 .logo{
@@ -16,12 +20,6 @@
     margin-top: 1%;
     margin-bottom: 1%;
     
-}
-
-
-nav{
-    width: 100%;
-    height: 10vh;
 }
 
 .navegacao{
@@ -58,6 +56,8 @@ nav{
 
 
 }
+
+
 
 /* Footer */
 footer{
