--- a/src/Login/baseNav/style.css
+++ b/src/Login/baseNav/style.css
@@ -30,11 +30,14 @@ nav{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-left: 68%;
+    margin-left: 64%;
     font-family: 'Inter';
 }
 
 .navegacao ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     list-style-type: none;
     padding: 0;
     margin: 0;
@@ -45,6 +48,15 @@ nav{
 .navegacao li {
     margin: 0 30px;
     font-size: 1vw;
+}
+
+
+.navegacao li:hover{
+    border-bottom: solid 4px #02C986;
+    border-radius: 10px;
+    color: #02C986;
+
+
 }
 
 /* Footer */
